--- a/records_club.html
+++ b/records_club.html
@@ -211,6 +211,8 @@ Triki Team" />
                             <li><a class="dropdown-item" href="./historia.html">Historia</a></li>
                             <li><a class="dropdown-item"
                                     href="https://swimburger-cas-app-demo.web.app/forms/licencia">Licencias</a></li>
+                            <li><a class="dropdown-item"
+                                href="./noticias.html">Últimas Noticias</a></li>        
                         </ul>
                     </li>
                     <li class="nav-item">
