cambiado el footer

--- a/estadisticas_club.html
+++ b/estadisticas_club.html
@@ -302,6 +302,18 @@ Triki Team" />
                         <li class="nav-item mb-2"><a href="https://swimburger-cas-app-demo.web.app/forms/licencia"
                                 class="nav-link p-0 text-muted">Inscripciones</a></li>
 
+                        <li class="nav-item mb-2"><a href="./noticias.html" class="nav-link p-0 text-muted">Últimas
+                                Noticias</a></li>
+
+                    </ul>
+                    <h5>Estadísticas</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="./records_club.html" class="nav-link p-0 text-muted">Récords
+                                del Club</a></li>
+
+                        <li class="nav-item mb-2"><a href="./estadisticas_atleta.html"
+                                class="nav-link p-0 text-muted">Estadísticas Atletas</a></li>
+
                     </ul>
                 </div>
                 <div class="col-md-5 offset-md-1 mb-3">
