--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ Triki Team" />
                                 del Club</a></li>
 
                         <li class="nav-item mb-2"><a href="./estadisticas_atleta.html"
-                                class="nav-link p-0 text-muted">Estadisticas Atletas</a></li>
+                                class="nav-link p-0 text-muted">Estadísticas Atletas</a></li>
 
                     </ul>
                 </div>
