--- a/noticias.html
+++ b/noticias.html
@@ -328,15 +328,17 @@ Triki Team" />
                         <li class="nav-item mb-2"><a href="https://swimburger-cas-app-demo.web.app/forms/licencia"
                                 class="nav-link p-0 text-muted">Inscripciones</a></li>
 
+                        <li class="nav-item mb-2"><a href="./noticias.html" class="nav-link p-0 text-muted">Últimas
+                                Noticias</a></li>
+
                     </ul>
-                    <br>
                     <h5>Estadísticas</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="./records_club.html" class="nav-link p-0 text-muted">Récords
                                 del Club</a></li>
 
                         <li class="nav-item mb-2"><a href="./estadisticas_atleta.html"
-                                class="nav-link p-0 text-muted">Estadisticas Atletas</a></li>
+                                class="nav-link p-0 text-muted">Estadísticas Atletas</a></li>
 
                     </ul>
                 </div>
