--- a/calendario.html
+++ b/calendario.html
@@ -263,7 +263,26 @@ Triki Team" />
             <div id="calendar"></div>
 
         </div>
+
+        <div class="row justify-content-center text-center d-flex mb-0" id="columnas-contacto">
+            <div class="col-lg-8 mb-0 mt-5">
+                <div class="text-center pb-1 wow fadeInUp" data-wow-delay="0.1s" style="margin-bottom: -5%;">
+                    <h1 class="mb-1">Inscribirse en otra carreras</h1>
+                    <p class="mb-0" style="font-weight: var(--bs-body-font-weight);">
+                        ¿Quieres inscribirte en otra carrera que no aparece en el calendario? No te preocupes, rellena este formulario y te inscribiremos sin ningún problema.
+                    </p>
+                    <hr class="divider" />
+                    
+                </div>
+
+                <div class="d-flex flex-column flex-sm-row w-100 mt-5 text-center justify-content-center align-items-center" style="margin-top: -3%;">
+                    <button class="btn btn-primary btn-lg" type="button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSejBudJ0YPq87iSHckvR3YEQt-CIkQF6gphRX_W1Qp2-4cOKw/viewform', '_blank')">Inscribirse</button>
+                </div>
+            </div>
+        </div>
     </div>
+
+    
 
 
 
