--- a/inscritos.html
+++ b/inscritos.html
@@ -395,7 +395,7 @@ Triki Team" />
     <script src="js/app.js"></script>
 
     <script>
-        var urlJSON = "https://script.googleusercontent.com/macros/echo?user_content_key=pLFadrLBgCwKWc8ifOSbi0DFa4h6mwwomnBUKScBmQXYMpAJFqgRHGPjZqwSdrNpw1V67lcTz2-VcPnXoSUOUU602CYeMZ4sm5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnHW0NT7Jwkg_kGbwsvHtmzcdc0BNxKn88F-9zClpgOAnYz1TR3b-EWBzGKGOWCJwdl9WLXxIGCXnTV6OKKRwPfejtqsbdipTD9z9Jw9Md8uu&lib=MyGqX4M0N-uUopvFXEjHQOgR7CCX8pvoj";
+        var urlJSON = "https://script.google.com/macros/s/AKfycbzhcAFKQOfKv43okQxFcMOggmXRAdLzpLjsumc7WMdPSzkmaGw8co6tSqosKAJ1bET4wQ/exec";
 
         // Mostrar mensaje de carga
         document.getElementById('loading-message').innerHTML = 'Cargando los atletas inscritos, espera unos segundos...';
