--- a/calendario.html
+++ b/calendario.html
@@ -454,7 +454,7 @@ Triki Team" />
                                     var formattedDate = startDate.toLocaleDateString('en-CA'); // Formato "YYYY-MM-DD"
 
                                     // Crear el enlace al formulario de inscripción con la fecha actual y el nombre de la prueba
-                                    var formLink = 'https://docs.google.com/forms/d/e/1FAIpQLSd9dfBW2FRdqtmipSiHHT75MbA-mzrGcvi9zw_p2Wgql3Z2Eg/viewform?usp=pp_url&entry.1531174623=' + info.event.title + '&entry.478235961=' + formattedDate;
+                                    var formLink = 'https://docs.google.com/forms/d/e/1FAIpQLSd9dfBW2FRdqtmipSiHHT75MbA-mzrGcvi9zw_p2Wgql3Z2Eg/viewform?usp=sf_link&entry.1531174623=' + info.event.title + '&entry.478235961=' + formattedDate;
 
                                     tooltipContent += '<a id="form_inscripcion" href="' + formLink + '" target="_blank">Formulario de inscripción</a>';
 
