eliminada la parte de licencias

--- a/index.html
+++ b/index.html
@@ -366,58 +366,7 @@ Triki Team" />
     </section>
 
 
-    <div class="container" style="padding-top: 4rem;">
-        <div class="row justify-content-center">
-            <div class="col-lg-1 "></div>
-            <div class="col-lg-5  py-2">
-                <h1 class="text-center">TRAMITACIÓN DE LICENCIAS</h1>
-                <hr class="divider" />
-                <p>El Club de Atletismo Santiago presenta el siguiente protocolo para la tramitación de licencias de sus
-                    atletas federados en la temporada 2024.
-                    Para la tramitación de la licencia RFEA/FGA por parte del Club de Atletismo Santiago entre a través
-                    de este enlace:</p>
-                <div class="d-flex justify-content-center align-items-center">
-                    <a href="https://swimburger-cas-app-demo.web.app/forms/licencia" class="btn btn-primary">
-                        Tramitación Licencias
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-lg-5 ">
-                <img src="img/licencias.webp" style="width: 60%; margin-left: 25%;" alt="Licencias">
-            </div>
-        </div>
-    </div>
-
-
-    <div class="container" style="padding-top: 4rem;">
-        <div class="row justify-content-center">
-            <div class="col-lg-1 "></div>
-            <div class="col-lg-5 d-flex justify-content-center align-items-center">
-                <img src="img/calendario.webp" style="width: 60%;" alt="Calendario">
-            </div>
-
-            <div class="col-lg-5  py-2">
-                <h1 class="text-center">CALENDARIO</h1>
-                <hr class="divider" />
-                <p> Te facilitamos un calendario de competiciones en Galicia tanto de pista cubierta, cross, pista al
-                    aire libre, carreras en ruta y carreras populares
-                    Descubre las fechas clave y no te pierdas ninguna oportunidad de participar en las mejores carreras
-                    de Galicia</p>
-                <div class="d-flex justify-content-center align-items-center">
-                    <a href="./calendario.html" class="btn btn-primary">
-                        Calendario de Competiciones
-                    </a>
-                </div>
-            </div>
-
-
-        </div>
-    </div>
-
-
-
-    <div class="container" style="padding-top: 4rem; padding-bottom: 4rem;">
+    <div class="container" style="padding-top: 4rem">
         <div class="row justify-content-center">
             <div class="col-lg-1 "></div>
             <div class="col-lg-5  py-2">
@@ -444,6 +393,36 @@ Triki Team" />
             </div>
         </div>
     </div>
+
+
+    <div class="container" style="padding-top: 4rem; padding-bottom: 4rem;">
+        <div class="row justify-content-center">
+            <div class="col-lg-1 "></div>
+            <div class="col-lg-5 d-flex justify-content-center align-items-center">
+                <img src="img/calendario.webp" style="width: 60%;" alt="Calendario">
+            </div>
+
+            <div class="col-lg-5  py-2">
+                <h1 class="text-center">CALENDARIO</h1>
+                <hr class="divider" />
+                <p> Te facilitamos un calendario de competiciones en Galicia tanto de pista cubierta, cross, pista al
+                    aire libre, carreras en ruta y carreras populares
+                    Descubre las fechas clave y no te pierdas ninguna oportunidad de participar en las mejores carreras
+                    de Galicia</p>
+                <div class="d-flex justify-content-center align-items-center">
+                    <a href="./calendario.html" class="btn btn-primary">
+                        Calendario de Competiciones
+                    </a>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+
+
+    
 
 
 
